--- a/Backtalk/Pages/Project.razor.css
+++ b/Backtalk/Pages/Project.razor.css
@@ -76,6 +76,8 @@
     resize: both;
     width: 250px;
     height: 650px;
+    top: 10vh;
+    left: 1.5vw;
     overflow: hidden;
     background-color: whitesmoke;
     border-color: lightgrey;
@@ -93,6 +95,7 @@
 .endpoint-editor {
     width: 1020px;
     height: 650px;
+    top: 10vh;
     overflow: hidden;
     resize: both;
     background-color: whitesmoke;
@@ -138,6 +141,8 @@
 .project-endpoints-explorer {
     width: 250px;
     height: 650px;
+    top: 10vh;
+    right: 1.5vw;
     overflow: hidden;
     resize: both;
     background-color: whitesmoke;
@@ -168,7 +173,7 @@
     height: fit-content;
     border: none;
     font-size: 16px;
-    color: lightgrey;
+    color: black;
     background-color: transparent;
     left: 0;
     right: 0;
